--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "clsx": "^2.1.1",
     "lucide-react": "^0.518.0",
     "marked": "^15.0.12",
-    "next": "15.3.4",
+    "next": "^16.1.6",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
